<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_hint">Поиск</string>
    <string name="clear_history">Очистить историю</string>
    <string name="refresh">Обновить</string>
    <string name="search_history_hint">Вы искали</string>
    <string name="dev_email">konstantin1410@yandex.ru</string>
    <string name="agreement_text">https://yandex.ru/legal/practicum_offer/</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте \nподключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="no_find_error">Ничего не нашлось</string>
    <string name="timing">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="zero_time">00:00</string>
    <string name="no_album">-</string>
</resources>
