<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settings_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/corner_margin"
            android:layout_marginTop="@dimen/corner_margin"
            android:src="@drawable/arrow"
            app:tint="@color/tint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="@dimen/margin_title_top"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"/>

    </LinearLayout>

    <Switch

        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:letterSpacing="0"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingEnd="5dp"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/settings_text_size"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/dark_theme"
        android:thumbTint="@color/switcher"
        android:trackTint="@color/switcher"
        android:id="@+id/themeSwitcher"
        />

    <TextView
        style="@style/SettingsButtons"
        app:drawableEndCompat="@drawable/share"
        android:text="@string/share"
        android:id="@+id/share_button"
        />

    <TextView
        style="@style/SettingsButtons"
        app:drawableEndCompat="@drawable/support"
        android:text="@string/support"
        android:id="@+id/support_button"
        />

    <TextView
        style="@style/SettingsButtons"
        app:drawableEndCompat="@drawable/license"
        android:text="@string/agreement"
        android:id="@+id/agreement_button"/>

</LinearLayout>

