<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="14dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingEnd="16dp"
        android:paddingBottom="28dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_layout_height"
            android:layout_weight="@dimen/main_button_layout_weight"
            android:textSize="@dimen/main_button_text_size"
            app:cornerRadius="@dimen/main_button_cornerRadius"
            app:iconPadding="@dimen/main_button_iconPadding"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:text="@string/search"
            android:textColor="@color/black"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:id="@+id/search_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_layout_height"
            android:layout_weight="@dimen/main_button_layout_weight"
            android:textSize="@dimen/main_button_text_size"
            app:cornerRadius="@dimen/main_button_cornerRadius"
            app:iconPadding="@dimen/main_button_iconPadding"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:text="@string/library"
            android:textColor="@color/black"
            app:icon="@drawable/mediateka"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:id="@+id/library_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_layout_height"
            android:layout_weight="@dimen/main_button_layout_weight"
            android:textSize="@dimen/main_button_text_size"
            app:cornerRadius="@dimen/main_button_cornerRadius"
            app:iconPadding="@dimen/main_button_iconPadding"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:text="@string/settings"
            android:textColor="@color/black"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:id="@+id/settings_button"/>

    </LinearLayout>

</LinearLayout>
